# SynthCore

./: .gitmodules  CMakeLists.txt  README.md
docs/: theming.md
generators/: parameters.cpp  parameters.hpp  source.cpp  utils.hpp  xml.hpp
include/Kaixo/Core/: Controller.hpp  Definitions.hpp  Formatters.hpp  Parameter.hpp  Serializable.hpp  Storage.hpp  pch.hpp
include/Kaixo/Core/Editor/: Editor.hpp
include/Kaixo/Core/Gui/: Button.hpp  Context.hpp  Dimensions.hpp  Knob.hpp  Listeners.hpp  PitchKnob.hpp  TabControl.hpp  Tooltip.hpp  View.hpp  Window.hpp
include/Kaixo/Core/Gui/Views/: EnvelopeDisplay.hpp  FilterDisplay.hpp  ImageView.hpp  LfoDisplay.hpp  PointsDisplay.hpp  ScrollView.hpp  SpectrumDisplay.hpp  TextView.hpp  XYController.hpp
include/Kaixo/Core/Processing/: Buffer.hpp  CircularBuffer.hpp  DelayBuffer.hpp  Filter.hpp  Interface.hpp  MeasureCPU.hpp  ModulationDatabase.hpp  Module.hpp  ParameterDatabase.hpp  PointStorage.hpp  Processor.hpp  Random.hpp  Resampler.hpp  Stereo.hpp  Voice.hpp  VoiceBank.hpp
include/Kaixo/Core/Processing/Modules/: Envelope.hpp  Lfo.hpp
include/Kaixo/Core/Theme/: Animated.hpp  Basic.hpp  Color.hpp  Container.hpp  Drawable.hpp  Element.hpp  ExpressionParser.hpp  FontMap.hpp  Image.hpp  MultiFrame.hpp  Point.hpp  Property.hpp  Rectangle.hpp  StateLinked.hpp  Stateful.hpp  TextArea.hpp  Theme.hpp  Value.hpp  ZoomMultiplier.hpp
include/Kaixo/Utils/: BasicXml.hpp  Color.hpp  Containers.hpp  Expression.hpp  FileWatcher.hpp  Logger.hpp  Math.hpp  Random.hpp  StringUtils.hpp  Timer.hpp  json.hpp  simd.hpp  string_literal.hpp  thread_pool.hpp  utils.hpp
libs/: CMakeLists.txt
resources/: simd_operations.xml
source/Kaixo/Core/: Controller.cpp  Storage.cpp
source/Kaixo/Core/Editor/: Editor.cpp
source/Kaixo/Core/Gui/: Button.cpp  Context.cpp  Knob.cpp  Listeners.cpp  PitchKnob.cpp  TabControl.cpp  Tooltip.cpp  View.cpp  Window.cpp
source/Kaixo/Core/Gui/Views/: EnvelopeDisplay.cpp  FilterDisplay.cpp  ImageView.cpp  LfoDisplay.cpp  PointsDisplay.cpp  ScrollView.cpp  SpectrumDisplay.cpp  TextView.cpp  XYController.cpp
source/Kaixo/Core/Processing/: MeasureCPU.cpp  ModulationDatabase.cpp  Module.cpp  Processor.cpp  Voice.cpp
source/Kaixo/Core/Theme/: Basic.cpp  Color.cpp  Container.cpp  Drawable.cpp  Element.cpp  ExpressionParser.cpp  FontMap.cpp  Image.cpp  MultiFrame.cpp  Point.cpp  Rectangle.cpp  Stateful.cpp  TextArea.cpp  Theme.cpp  Value.cpp
source/Kaixo/Utils/: FileWatcher.cpp  Logger.cpp
tests/include/Kaixo/Test/: Test.hpp  pch.hpp
tests/source/Kaixo/Test/: EntryPoint.cpp
tests/source/Kaixo/Test/Tests/: ExpressionParser.cpp  Theme.cpp  ThemeTests.cpp
